Cleanup for 1.0.1